# peta

./: .dockerignore  .editorconfig  .envrc.example  .gitignore  Dockerfile.rust  LICENSE  Makefile  README.md  docker-compose.yml  kind.yaml  skaffold.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: fusen.yml  recommendation.yml  tag.yml
api/peta/fusen/v1/: fusen.proto
backend/fusen/: Cargo.toml  Makefile  diesel.toml  main.rs
backend/fusen/domain/: Cargo.toml
backend/fusen/domain/src/: lib.rs
backend/fusen/domain/src/aggregate/: aggregate.rs  mod.rs
backend/fusen/domain/src/entity/: fusen.rs  mod.rs
backend/fusen/domain/src/repository/: fusen.rs  id.rs  mod.rs
backend/fusen/domain/src/vo/: id.rs  mod.rs  note.rs  title.rs
backend/fusen/infrastructure/: Cargo.toml
backend/fusen/infrastructure/src/: lib.rs
backend/fusen/infrastructure/src/grpc/: service.rs
backend/fusen/infrastructure/src/memory/: fusen.rs  mod.rs
backend/fusen/infrastructure/src/postgres/: connection.rs  fusen.rs  mod.rs  models.rs  schema.rs
backend/fusen/infrastructure/src/ulid/: id.rs
backend/fusen/interface/: Cargo.toml  build.rs
backend/fusen/interface/src/: lib.rs
backend/fusen/interface/src/controller/: controller.rs  mod.rs
backend/fusen/migrations/2021-10-17-070837_fusens/: down.sql  up.sql
backend/fusen/usecase/: Cargo.toml
backend/fusen/usecase/src/interactor/: create_fusen.rs  delete_fusen.rs  get_fusen.rs  mod.rs
backend/fusen/usecase/src/port/: create_fusen.rs  delete_fusen.rs  get_fusen.rs  mod.rs  port.rs
backend/microservices/svc/fusen/: Cargo.toml
backend/microservices/svc/recommendation/: Cargo.toml
backend/microservices/svc/tag/: Cargo.toml
backend/recommendation/: Cargo.toml  Makefile
backend/tag/: Cargo.toml  Makefile
backend/tag/domain/: Cargo.toml
backend/tag/domain/src/: lib.rs
backend/tag/domain/src/aggregate/: aggregate_root.rs  mod.rs  tag.rs
backend/tag/domain/src/entity/: mod.rs  tag.rs
backend/tag/domain/src/repository/: mod.rs  tag.rs
backend/tag/domain/src/vo/: fusen_id.rs  hash.rs  mod.rs  name.rs  tag_hash.rs  tag_name.rs
backend/tag/infrastructure/: Cargo.toml  Makefile
backend/tag/infrastructure/migrations/2021-10-24-064044_create_tag_table/: down.sql  up.sql
backend/tag/infrastructure/src/: lib.rs
backend/tag/infrastructure/src/repository/postgres/: connection_manager.rs  diesel.toml  env.rs  mod.rs  models.rs  repo.rs  schema.rs
backend/tag/interface/: Cargo.toml
backend/tag/usecase/: Cargo.toml
backend/tag/usecase/src/: lib.rs
backend/tag/usecase/src/interactor/: get_tag.rs  mod.rs
backend/tag/usecase/src/port/: get_tag.rs  mod.rs  port.rs
frontend/: package.json
manifest/base/: fusen.yaml  kustomization.yaml
