[package]
name = "fusen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["domain", "usecase", "interface", "infrastructure"]

[dependencies]
domain = { path = "./domain" }
usecase = { path = "./usecase" }
interface = { path = "./interface" }
infrastructure = { path = "./infrastructure" }
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }

[[bin]]
name = "app"
path = "main.rs"
