[package]
name = "recommendation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["domain", "usecase", "interface", "infrastructure"]

[dependencies]

[[bin]]
name = "recommendation"
path = "main.rs"
