[package]
name = "infrastructure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
interface = { path = "../interface" }
derive-new = "0.5.9"
anyhow = "1.0.44"
thiserror = "1.0.30"
ulid = "0.4.1"
tonic = { version = "0.5.2", features = ["tls", "compression"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"

