[package]
name = "interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
mockall = "0.10.2"
derive-new = "0.5.9"
anyhow = "1.0.44"
thiserror = "1.0.30"
tonic = { version = "0.5.2", features = ["tls", "compression"] }
prost = "0.8"
prost-types = "0.8"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost", "compression"] }
