[package]
name = "infrastructure"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
anyhow = "1.0.44"
